--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,19 @@
 asgiref==3.4.1
 autopep8==1.6.0
+dj-database-url==0.5.0
 Django==3.2.10
 django-ckeditor==6.2.0
 django-js-asset==1.2.2
+django-on-heroku==1.1.2
 flake8==4.0.1
+gunicorn==20.1.0
 mccabe==0.6.1
 Pillow==8.4.0
+psycopg2-binary==2.9.2
 pycodestyle==2.8.0
 pyflakes==2.4.0
 pytz==2021.3
 sqlparse==0.4.2
 toml==0.10.2
 tzdata==2021.5
+whitenoise==5.3.0
