--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.4.1
 autopep8==1.6.0
+certifi==2021.10.8
+charset-normalizer==2.0.9
 dj-database-url==0.5.0
 Django==3.2.10
 django-ckeditor==6.2.0
@@ -7,13 +9,17 @@ django-js-asset==1.2.2
 django-on-heroku==1.1.2
 flake8==4.0.1
 gunicorn==20.1.0
+idna==3.3
 mccabe==0.6.1
 Pillow==8.4.0
 psycopg2-binary==2.9.2
 pycodestyle==2.8.0
 pyflakes==2.4.0
 pytz==2021.3
+razorpay==1.2.0
+requests==2.26.0
 sqlparse==0.4.2
 toml==0.10.2
 tzdata==2021.5
+urllib3==1.26.7
 whitenoise==5.3.0
