--- a/requirements.txt
+++ b/requirements.txt
@@ -6,13 +6,13 @@ dj-database-url==0.5.0
 Django==3.2.10
 django-ckeditor==6.2.0
 django-js-asset==1.2.2
-django-on-heroku==1.1.2
 flake8==4.0.1
 gunicorn==20.1.0
 idna==3.3
+importlib-metadata==4.2.0
 mccabe==0.6.1
+mysqlclient==2.1.0
 Pillow==8.4.0
-psycopg2-binary==2.9.2
 pycodestyle==2.8.0
 pyflakes==2.4.0
 pytz==2021.3
@@ -20,6 +20,8 @@ razorpay==1.2.0
 requests==2.26.0
 sqlparse==0.4.2
 toml==0.10.2
+typing_extensions==4.0.1
 tzdata==2021.5
 urllib3==1.26.7
 whitenoise==5.3.0
+zipp==3.6.0
