--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 asgiref==3.4.1
 autopep8==1.6.0
 certifi==2021.10.8
+cffi==1.15.0
+cryptography==36.0.1
+defusedxml==0.7.1
 charset-normalizer==2.0.9
 dj-database-url==0.5.0
 Django==3.2.10
+django-allauth==0.47.0
 django-ckeditor==6.2.0
 django-js-asset==1.2.2
 flake8==4.0.1
@@ -16,8 +20,13 @@ Pillow==8.4.0
 pycodestyle==2.8.0
 pyflakes==2.4.0
 pytz==2021.3
+oauthlib==3.1.1
+PyJWT==2.3.0
+python3-openid==3.2.0
+pycparser==2.21
 razorpay==1.2.0
 requests==2.26.0
+requests-oauthlib==1.3.0
 sqlparse==0.4.2
 toml==0.10.2
 typing_extensions==4.0.1
